--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*----------------------------------------------------------------------
-    Template Name: WellFood - Resturent HTML Template
+    Template Name: blend - Resturent HTML Template
     Template URI: https://webtend.net/demo/html/limestone/
     Author: WebTend
     Author URI:  https://webtend.net/
@@ -7936,7 +7936,6 @@ h6,
   align-items: center;
 }
 .product-details-content .add-to-cart h5 {
-
 }
 .product-details-content .add-to-cart input {
   font-size: 20px;
