--- a/public/assets/css/update.css
+++ b/public/assets/css/update.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*----------------------------------------------------------------------
-    Template Name: WellFood - Resturent HTML Template
+    Template Name: blend - Resturent HTML Template
     Template URI: https://webtend.net/demo/html/limestone/
     Author: WebTend
     Author URI:  https://webtend.net/
