--- a/public/assets/sass/style.sass
+++ b/public/assets/sass/style.sass
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*----------------------------------------------------------------------
-    Template Name: WellFood - Resturent HTML Template
+    Template Name: blend - Resturent HTML Template
     Template URI: https://webtend.net/demo/html/limestone/
     Author: WebTend
     Author URI:  https://webtend.net/
