--- a/app/globals.css
+++ b/app/globals.css
@@ -142,3 +142,23 @@
   opacity: 1;
   color: var(--primary-color, #ff6b6b);
 }
+
+/* Offer Card Mobile Slider - Full Width */
+@media (max-width: 575px) {
+  .offer-card-mobile-slider {
+    width: 100vw;
+    position: relative;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
+  }
+
+  .offer-card-slider-mobile .slick-slide {
+    padding: 0 !important;
+  }
+
+  .offer-card-slider-mobile .slick-list {
+    overflow: hidden;
+  }
+}
