--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,10 @@
 .main-menu .navbar-collapse li ul li ul {
   top: -2% !important;
 }
+.close {
+  background-color: transparent;
+  font-size: 23px;
+}
 
 /* Slick slider */
 .slick-dots,
