--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -163,7 +163,7 @@ textarea,
 .nice-select,
 .form-control {
   width: 100%;
-  height: auto;
+  height: 50px;
   font-weight: 400;
   border-radius: 0;
   font-size: 16px;
