--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,8 @@
   opacity: 1;
   top: 100%;
   display: block;
+  max-height: 300px;
+  overflow: auto;
 }
 .main-menu .navbar-collapse li ul li ul {
   top: -2% !important;
@@ -234,7 +236,9 @@ img {
   font-size: 16px;
   line-height: 1.5;
   color: #495057;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition:
+    border-color 0.15s ease-in-out,
+    box-shadow 0.15s ease-in-out;
   position: relative;
 }
 
