--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -64,6 +64,7 @@ body {
   line-height: 30px;
   font-size: 16px;
   font-family: var(--base-font);
+  overflow-x: hidden;
   --base-font: "Roboto", sans-serif;
   --heading-font: "Bebas Neue", sans-serif;
   --primary-color: #ec3d08;
@@ -3442,28 +3443,40 @@ h6,
 @-webkit-keyframes toggler {
   0%,
   10% {
-    background-position: 0 0, 0 calc(100% / 3);
+    background-position:
+      0 0,
+      0 calc(100% / 3);
   }
   50% {
-    background-position: 0 0, calc(100% / 3) calc(100% / 3);
+    background-position:
+      0 0,
+      calc(100% / 3) calc(100% / 3);
   }
   90%,
   100% {
-    background-position: 0 0, calc(100% / 3) 0;
+    background-position:
+      0 0,
+      calc(100% / 3) 0;
   }
 }
 
 @keyframes toggler {
   0%,
   10% {
-    background-position: 0 0, 0 calc(100% / 3);
+    background-position:
+      0 0,
+      0 calc(100% / 3);
   }
   50% {
-    background-position: 0 0, calc(100% / 3) calc(100% / 3);
+    background-position:
+      0 0,
+      calc(100% / 3) calc(100% / 3);
   }
   90%,
   100% {
-    background-position: 0 0, calc(100% / 3) 0;
+    background-position:
+      0 0,
+      calc(100% / 3) 0;
   }
 }
 
@@ -4322,9 +4335,11 @@ h6,
   display: none;
   padding: 20px 0;
   background: #ffffff;
-  -webkit-box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.05),
+  -webkit-box-shadow:
+    2px 2px 5px 1px rgba(0, 0, 0, 0.05),
     -2px 0px 5px 1px rgba(0, 0, 0, 0.05);
-  box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.05),
+  box-shadow:
+    2px 2px 5px 1px rgba(0, 0, 0, 0.05),
     -2px 0px 5px 1px rgba(0, 0, 0, 0.05);
 }
 .main-menu .navbar-collapse li .megamenu:after {
@@ -4362,9 +4377,11 @@ h6,
   z-index: 100;
   display: none;
   background: white;
-  -webkit-box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.05),
+  -webkit-box-shadow:
+    2px 2px 5px 1px rgba(0, 0, 0, 0.05),
     -2px 0px 5px 1px rgba(0, 0, 0, 0.05);
-  box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.05),
+  box-shadow:
+    2px 2px 5px 1px rgba(0, 0, 0, 0.05),
     -2px 0px 5px 1px rgba(0, 0, 0, 0.05);
 }
 @media only screen and (max-width: 991px) {
@@ -8242,6 +8259,8 @@ h6,
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  min-width: 100%;
+  padding-right: 35px;
 }
 .marquee-inner.left {
   -webkit-animation: marquee_left 20s linear infinite;
@@ -8250,6 +8269,11 @@ h6,
 .marquee-inner.right {
   -webkit-animation: marquee_right 20s linear infinite;
   animation: marquee_right 20s linear infinite;
+}
+@media only screen and (max-width: 575px) {
+  .marquee-inner {
+    padding-right: 15px;
+  }
 }
 
 /* Headline style */
@@ -8269,6 +8293,9 @@ h6,
   font-family: var(--heading-font);
   -webkit-text-stroke-width: 1.5px;
   -webkit-text-stroke-color: rgba(14, 19, 23, 0.1);
+  width: 100%;
+  max-width: 100vw;
+  box-sizing: border-box;
 }
 @media only screen and (max-width: 1399px) {
   .marquee-wrap {
@@ -8280,9 +8307,20 @@ h6,
     font-size: 80px;
   }
 }
+@media only screen and (max-width: 767px) {
+  .marquee-wrap {
+    font-size: 70px;
+  }
+}
 @media only screen and (max-width: 575px) {
   .marquee-wrap {
     font-size: 60px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .marquee-wrap {
+    font-size: 45px;
+    -webkit-text-stroke-width: 1px;
   }
 }
 .marquee-wrap .marquee-item {
@@ -8328,7 +8366,37 @@ h6,
 }
 @media only screen and (min-width: 1400px) {
   .marquee-wrap.style-two {
-    font-size: 450px;
+    font-size: 300px;
+  }
+}
+@media only screen and (max-width: 1399px) {
+  .marquee-wrap.style-two {
+    font-size: 120px;
+  }
+}
+@media only screen and (max-width: 1199px) {
+  .marquee-wrap.style-two {
+    font-size: 100px;
+  }
+}
+@media only screen and (max-width: 991px) {
+  .marquee-wrap.style-two {
+    font-size: 85px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .marquee-wrap.style-two {
+    font-size: 70px;
+  }
+}
+@media only screen and (max-width: 575px) {
+  .marquee-wrap.style-two {
+    font-size: 60px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .marquee-wrap.style-two {
+    font-size: 50px;
   }
 }
 .marquee-wrap.white-text {
