--- a/public/assets/sass/sections/_headline.sass
+++ b/public/assets/sass/sections/_headline.sass
@@ -3,6 +3,10 @@
 /*******************************************************/        
 .marquee-inner
     display: flex
+    min-width: 100%
+    padding-right: 35px
+    +res-bl(sm)
+        padding-right: 15px
     &.left
         animation: marquee_left 20s linear infinite
     &.right
@@ -21,12 +25,20 @@
     font-family: $heading-font
     -webkit-text-stroke-width: 1.5px
     -webkit-text-stroke-color: rgba(14, 19, 23, 0.1)
+    width: 100%
+    max-width: 100vw
+    box-sizing: border-box
     +res-bl(xxl)
         font-size: 100px
     +res-bl(lg)
         font-size: 80px
+    +res-bl(md)
+        font-size: 70px
     +res-bl(sm)
         font-size: 60px
+    +res-bl(xs)
+        font-size: 45px
+        -webkit-text-stroke-width: 1px
     .marquee-item
         display: flex
         align-items: center
@@ -50,7 +62,19 @@
         color: $heading-color
         -webkit-text-stroke-width: 0
         +res-ab(xxl)
-            font-size: 450px
+            font-size: 280px
+        +res-bl(xxl)
+            font-size: 120px
+        +res-bl(xl)
+            font-size: 100px
+        +res-bl(lg)
+            font-size: 85px
+        +res-bl(md)
+            font-size: 70px
+        +res-bl(sm)
+            font-size: 60px
+        +res-bl(xs)
+            font-size: 50px
             
     &.white-text
         -webkit-text-stroke-color: rgba(255, 255, 255, 0.1)
